// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupsElement render should pass createOptions object if it's add prop is true 1`] = `
<FormElement
  name="Groups"
>
  <SelectSearch
    __className=""
    assets={
      GroupAssets {
        "assetType": "group",
        "assets": Object {},
        "endpoint": "/assets/groups.json",
        "idProperty": "uuid",
        "localStorage": true,
      }
    }
    createNewOption={[Function]}
    createPrompt="New group: "
    initial={Array []}
    isOptionUnique={[Function]}
    isValidNewOption={[Function]}
    multi={true}
    name="Groups"
    onChange={[Function]}
    placeholder="Enter the name of an existing group..."
    resultType="group"
    searchPromptText="Invalid group"
    searchable={true}
  />
</FormElement>
`;

exports[`GroupsElement render should render self, children with required props 1`] = `
Object {
  "__className": "",
  "assets": GroupAssets {
    "assetType": "group",
    "assets": Object {},
    "endpoint": "/assets/groups.json",
    "idProperty": "uuid",
    "localStorage": true,
  },
  "initial": Array [],
  "multi": true,
  "name": "Groups",
  "onChange": [Function],
  "placeholder": "Enter the name of an existing group...",
  "resultType": "group",
  "searchPromptText": "Invalid group",
  "searchable": true,
}
`;

exports[`GroupsElement render should render self, children with required props 2`] = `
<FormElement
  name="Groups"
>
  <SelectSearch
    __className=""
    assets={
      GroupAssets {
        "assetType": "group",
        "assets": Object {},
        "endpoint": "/assets/groups.json",
        "idProperty": "uuid",
        "localStorage": true,
      }
    }
    initial={Array []}
    multi={true}
    name="Groups"
    onChange={[Function]}
    placeholder="Enter the name of an existing group..."
    resultType="group"
    searchPromptText="Invalid group"
    searchable={true}
  />
</FormElement>
`;
